--- a/netlify.toml
+++ b/netlify.toml
@@ -7,7 +7,8 @@
 [[redirects]]
   from = "/test-page/*"
   to = "https://www.google.com"
-  status = 200!
+  status = 200
+  force = true
 
   ## (optional) Settings for Netlify Dev
   ## https://github.com/netlify/cli/blob/main/docs/netlify-dev.md#project-detection
